# airi

./: Cargo.toml  pnpm-lock.yaml
apps/stage-tamagotchi/: vite.config.ts
apps/stage-tamagotchi/src-tauri/: Cargo.toml
apps/stage-tamagotchi/src-tauri/capabilities/: default.json
apps/stage-tamagotchi/src-tauri/src/: lib.rs
apps/stage-tamagotchi/src/bindings/tauri-plugins/: audio-transcription.ts  audio-tts.ts
apps/stage-tamagotchi/src/pages/settings/providers/: app-local-audio-speech.vue  app-local-audio-transcription.vue
apps/stage-web/src/pages/settings/providers/: app-local-audio-speech.vue  app-local-audio-transcription.vue
crates/tauri-plugin-ipc-audio-transcription-ort/: Cargo.toml  build.rs
crates/tauri-plugin-ipc-audio-transcription-ort/permissions/autogenerated/: reference.md
crates/tauri-plugin-ipc-audio-transcription-ort/permissions/autogenerated/commands/: list_installed_models.toml
crates/tauri-plugin-ipc-audio-transcription-ort/permissions/schemas/: schema.json
crates/tauri-plugin-ipc-audio-transcription-ort/src/: lib.rs
crates/tauri-plugin-ipc-audio-tts-ort/: Cargo.toml  build.rs
crates/tauri-plugin-ipc-audio-tts-ort/permissions/autogenerated/: reference.md
crates/tauri-plugin-ipc-audio-tts-ort/permissions/autogenerated/commands/: synthesize.toml
crates/tauri-plugin-ipc-audio-tts-ort/permissions/schemas/: schema.json
crates/tauri-plugin-ipc-audio-tts-ort/src/: audio.rs  lib.rs  models.rs
crates/tauri-plugin-ipc-audio-vad-ort/: Cargo.toml
