[package]
name = "tauri-plugin-ipc-audio-tts-ort"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-ipc-audio-tts-ort"

[lib]
name = "tauri_plugin_ipc_audio_tts_ort"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
anyhow = "1"
thiserror = "1"
ndarray = "0.16"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.21.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
rubato = "0.16"
hound = "3.5"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "coreml", "download-binaries"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "directml", "cuda", "download-binaries"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "cuda", "download-binaries"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
